常用 GC 参数。